--- a/style.css
+++ b/style.css
@@ -5,21 +5,23 @@
 }
 
 .container {
-  margin: 50px auto;
+  display: flex;
+
+  background-color: rgb(254, 254, 254);
   border: solid 1px black;
   width: 300px;
   height: 300px;
 }
 
 .backgroundOfContainer {
-  width: 300px;
-  height: 300px;
+  position: relative;
+  overflow: hidden;
 }
 
 .meme-text {
-  font-size: 50px;
-  color: rgb(0, 136, 255);
+  position: absolute;
+  font-size: 30px;
+  color: rgb(255, 255, 255);
   font-weight: 900;
-  padding: 10px;
-  margin-top: 70%;
+  text-shadow: 5px 5px 5px black;
 }
