--- a/style.css
+++ b/style.css
@@ -29,9 +29,8 @@ h1 {
 }
 
 .container {
+  position: relative;
   display: flex;
-  position: absolute;
-  background-color: white;
   border: solid 1px black;
   width: 300px;
   height: 300px;
@@ -39,10 +38,14 @@ h1 {
 
 .backgroundOfContainer {
   width: 100%;
+  object-fit: cover;
 }
 
 .meme-text {
   position: absolute;
+  bottom: 5px;
+  text-align: center;
+  width: 100%;
   font-size: 30px;
   color: white;
   font-weight: 900;
